<resources>
    <string name="app_name">ClothesLineAgent</string>
    <string name="textAuto">เปิดการทำงานแบบอัตโนมัติ\nซึ่งระบบจะทำงานโดยอ้างอิงข้อมูลจากเซ็นเซอร์บนตัวอุปกรณ์\nได้แก่ เซ็นเซอร์ตรวจจับการลงเม็ดของฝน ซึ่งอาศัยหลักการนำไฟฟ้าของน้ำ(ไม่บริสุทธิ์) และการทำตัวเป็นสารอิเล็คโทรไลต์ของน้ำ ,เซ็นเซอร์วัดความสว่างจากแสงสภาพแวดล้อม ซึ่งเงื่อไขในการทำงานดังกล่าวถูกกำหนดไว้แล้วในซอร์สโค้ด\nรายละเอียด https://github.com/cchian/SmartClothesline</string>
    <string name="textOnOff">เปิด/ปิดการทำงาน ความคุมด้วยตนเอง โดยจะต้องปิดการทำงานอัตโนมัตเสียก่อนโดยกดปิดการทำงานอัตโนมัติด้านบน (รางเลื่อนเปิดนำผ้าตาก / รางเลื่อนกลับเข้าตู้เก็บนำผ้าที่ตากกลับเข้าในที่ร่ม)</string>
    <string name="textRaw">แสดงข้อมูลดิบจากเซ็นเซอร์แบบ RealTime</string>
    <string name="title_activity_setting">การตั้งค่า</string>
    <string name="netpiedec" >
        ข้อมูล appid key secret เปรียบเสมือน username และ password ที่อุปกรณ์จะต้องใช้ในการล็อกอินเข้าสู่ระบบของ netpie ซึ่ง netpie นั้นคือ broker server ที่ช่วยให้อุปกรณ์ที่อยู่คนละฟากฝั่งของอินเทอร์เน็ตเชื่อมต่อถึงกันได้โดยไม่จำเป็นต้องอ้างถึงอุปกรณ์ด้วยหมายเลชไอพีสาธารณะ ซึ่งมีอย่าจำกัด
    </string>
    <string name="cldvdec" >
        ชื่ออุปกรณ์ จะเป็นชื่อจุดหมายปลายทางที่จะส่งข้อมูล ถ้าไม่ระบุชื่ออุปกรณ์ ClotheslineAgent ก็ไม่มีทางที่จะส่งข้อมูลการสั่งงานไปยังอุปกรณ์ที่ผู้สั่งงานต้องการได้
    </string>
    <string name="ntfrate" >
    เหตุการณ์สำหรับการแจ้งเตือนจะถูกแสดงให้เป็นผ่าน notify
    และเพื่ือป้องกันการแจ้งเตือนซ้ำๆเดิม  จะมีระยะห่างในการแจ้งเตือนที่จำกัดเวลาไว้ตามช้อมูลด้านล่าง ถ้ายังไม่ครบกำหนดเวลา การแจ้งเตือนที่เป็นการแจ้งเตือนเดิมจะไม่ถูกแสดงให้เห็น
    </string>
</resources>
